# tv-preference-env

./: .gitignore  Dockerfile  README.md  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_graders.py
data/: llm_cache.json  preference_dataset.json  task3_template.json
docs/: checklist_and_instructions.md  critical_analysis.md  decision.md  task3_errors.md
server/: app.py
src/: environment.py  graders.py  models.py  reward.py  server.py
tests/: test_graders.py  test_reward.py  test_server.py
tools/: build_dataset.py  corrupt_task3.py  finalise_task3.py  generate_dataset.py
